--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             Bx2 = ((Bx3 * V3) + (Bx1 * V1)) / V2
 
             //verifica
-            if (Bx2 == null || Bx2 == NaN || Bx2 == Infinity || V3 == null) {
+            if (Bx2 == null || Bx2 == NaN || Bx2 == Infinity ) {
                 document.querySelector("#resultado").innerHTML = 0;
             }
             else {
