--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
             var Bx2;
 
             //processa
-            Bx2 = ((Bx3 * V3) + (Bx1 * V1)) / V2
+            Bx2 = ((Bx3 * V3) - (Bx1 * V1)) / V2
 
             //verifica
-            if (Bx2 == null || Bx2 == NaN || Bx2 == Infinity || V3 == 0) {
+            if (Bx2 == null || Bx2 == NaN || Bx2 == Infinity || V3 == null) {
                 document.querySelector("#resultado").innerHTML = 0;
             }
             else {
